syntax = "proto3";

                 package orderImage;
service OrderImageService {
 rpc createOrderImage (OrderImageCreateInput) returns (OrderImage) {}
rpc orderImages (findManyParams) returns (stream OrderImage) {}
rpc orderImage (OrderImageWhereUniqueInput) returns (OrderImage) {}
rpc updateOrderImage (OrderImageUpdateInput) returns (OrderImage) {}
rpc deleteOrderImage (OrderImageWhereUniqueInput) returns (OrderImage) {} 
 }
message OrderImageCreateInput {
string createdAt = 1;
string id = 2;
string imageUrl = 3;
};
message OrderImage {
string createdAt = 1;
string id = 2;
string imageUrl = 3;
};
message OrderImageWhereUniqueInput {
string createdAt = 1;
string id = 2;
string imageUrl = 3;
};
message OrderImageUpdateInput {
string createdAt = 1;
string id = 2;
string imageUrl = 3;
};
message findManyParams {

};